@@ -1,3 +1,7 @@
+2007-11-28  Tor Lillqvist  <tml@novell.com>
+
+	* config.h.win32.in: Update to match what configure produces.
+
 2007-11-28  Alexander Larsson  <alexl@redhat.com>
 
 	* glib/gstring.c (g_string_append_uri_escaped):
